@@ -1,5 +1,8 @@
 package Dancer2::Plugin::FormValidator::Role::Profile;
 
+use strict;
+use warnings;
+
 use Moo::Role;
 
 requires 'profile';
