@@ -1,4 +1,7 @@
 0.82 ------ Europe/Moscow
+    [IMPROVEMENTS]
+    * Add use strict, warnings
+
     [DOCS]
     * Typos
 
